resolve invalid HTML rendering results

--- a/result.html
+++ b/result.html
@@ -8,11 +8,11 @@
 <div>
 This is a
 <!--
-style: {"data-fs-style":"format.span_yellow_text"}
+style: {"data-fs-style":"format.custom_yellow_text"}
 -->
-<span>
+<div>
 STYLED
-</span>
+</div>
 HEADLINE
 </div>
 
@@ -27,58 +27,58 @@ Links can never contain a styled text, but
 <!--
 style: {"data-fs-style":"format.u"}
 -->
-<span>
+<div>
 styled text may contain
 <!-- data is inline, nothing to resolve -->
 <!-- {"lt_link_behavior":{"fsType":"CMS_INPUT_RADIOBUTTON","name":"lt_link_behavior","value":{"fsType":"Option","label":"Im neuen Tab/Fenster öffnen","identifier":"_blank"}},"lt_text":{"fsType":"CMS_INPUT_TEXT","name":"lt_text","value":"links"},"lt_url":{"fsType":"CMS_INPUT_TEXT","name":"lt_url","value":"https://example.com"}} -->
 <a>links</a>
 !
-</span>
+</div>
 <br/>
 This paragraph even contains a linebreak, and some
 <!--
 style: {"data-fs-style":"format.b"}
 -->
-<span>
+<div>
 bold
-</span>
+</div>
 text!
 <br/>
 <!--
 style: {"data-fs-style":"format.b"}
 -->
-<span>
+<div>
 <!--
 style: {"data-fs-style":"format.b"}
 -->
-<span>
+<div>
 <!--
 style: {"data-fs-style":"format.i"}
 -->
-<span>
+<div>
 This text hast two styles!
-</span>
-</span>
-</span>
+</div>
+</div>
+</div>
 <br/>
 <!--
 style: {"data-fs-style":"format.i"}
 -->
-<span>
+<div>
 And this italtic text shows how
 <!--
 style: {"data-fs-style":"format.u"}
 -->
-<span>
+<div>
 styles can be nested
-</span>
+</div>
 .
-</span>
+</div>
 <br/>
 <!--
 style: {"data-fs-style":"format.u"}
 -->
-<span>
+<div>
 You can put a lot more into styled text, then you&#39;d expect...
 <!--
 list data: {"data-fs-style":"2","data-fs-property-pre":"i.","data-fs-property-style":"2"}
@@ -98,7 +98,7 @@ or other block elements
 </li>
 </ul>
 strange, right?
-</span>
+</div>
 </div>
 
 <div>
